@@ -1,2 +1,3 @@
-Requires MIUI CN V12.5.1.0 or V12.5.3.0 firmware
+Requires MIUI GLOBAL V12.5.2.0 firmware
 Requires GApps (FlameGApps recommended)
+Currently the FM Radio does not work
